clusters/production/external-servers/unify/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unify-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unify.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: unify
          port: 443
          scheme: https
          serversTransport: unify-insecure-transport
  tls:
    secretName: unify-certificate-secret
